syntax = "proto3";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

package pb;
option go_package="/pb";

message UploadImageRequest {
  string image_id = 1;
  string bucket_name = 2;
  bytes image_path = 3;
}

message UploadImageResponse {
  string image_url = 1;
}

service ImageService {
  rpc UploadImage(UploadImageRequest) returns (UploadImageResponse){
    option (google.api.http) = {
      post: "/image/aws"
      body:"*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "Authentication";
          value: {}
        }
      }
    };
  };
}
