syntax="proto3";

package pb;

option go_package="/pb";

message Register {
  string user_id =1;
  string user_name =2;
  string user_address =3;
  string user_phone =4;
  string user_email =5;
  string user_dob =6;
  string user_gender =7;
  string  user_photo =8;
}
message Login{
  string user_phone =1;
  string user_email =2;
}
message GetOneUser{
  string user_id =1;
}
message CreateRegisterRequest{
  Register userRegister =1;
}
message CreateRegisterResponse{
  Register userRegister =1;
}
message GetOneUserRequest{
  GetOneUser userRegister =1;
}
message GetOneUserResponse{
  Register userRegister =1;
}
message CreateLoginRequest{
  Login userLogin =1;
}
message CreateLoginResponse{
  Register userLogin =1;
}
message GetUsersRequest{

}
message GetUsersResponse{
  repeated Register users=1;
}

message UpdateUserRequest{
  Register UpdateUser=1;
}
message UpdateUserResponse{
  Register UpdateUser=1;
}
message DeleteUserRequest{
  string user_id=1;
}
message DeleteUserResponse{
  bool success=1;
}

service UserService{
  rpc RegisterUser(CreateRegisterRequest) returns(CreateRegisterResponse){}
  rpc GetUser(GetOneUserRequest) returns(GetOneUserResponse){}
  rpc LoginUser(CreateLoginRequest) returns(CreateLoginResponse){}
  rpc GetMultipleUsers(GetUsersRequest) returns(GetUsersResponse){}
  rpc UpdateUserDetail(UpdateUserRequest) returns(UpdateUserResponse){}
  rpc DeleteUserDetail(DeleteUserRequest) returns(DeleteUserResponse){}
}